--- a/oi.html
+++ b/oi.html
@@ -1,9 +1,11 @@
-<html>
-	<head>
-
-	        <title>Meu Primeiro Site</title>
-        </head>
-        <body>
-                hello world
-        </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+</head>
+<body>
+   <h1>clear</h1>      
+</body>
 </html>
