--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
         <title>Document</title>
 </head>
 <body>
-   <h1>clear</h1>  hhhhh    
+<p><!DOCTYPE html>
+        <html>
+        <head>
+        <title>Page Title</title>
+        </head>
+        <body>
+        
+        <h1>My First Heading</h1><h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <h5>Heading 5</h5>
+        <h6>Heading 6</h6>
+        <p>My first paragraph.</p>
+        
+        </body>
+        </html></p>   <h1>clear</h1>  hhhhh 
+        <h2>o que e html</h2>  
+        <!DOCTYPE html>
+<html>
+<body>
+
+<h2>An Unordered HTML List</h2>
+
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>  <!DOCTYPE html>
+<html>
+<body>
+
+<h2>An Unordered HTML List</h2>
 </body>
 </html>
