--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         
         </body>
         </html></p>   <h1>clear</h1>  hhhhh 
-        <h2>o que e html</h2>  
+        <h2>o que e html</h2> 
+        <img src="img/exemplohtml.png" alt="logohtmlpreto">
+
         <!DOCTYPE html>
 <html>
 <body>
@@ -37,6 +39,7 @@
 </ul>  <!DOCTYPE html>
 <html>
 <body>
+        <img src="img/logohtml.png" alt="estruturabasica">
 
 <h2>An Unordered HTML List</h2>
 </body>
