--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>My first paragraph.</p>
         
         </body>
-        </html></p>   <h1>clear</h1>  hhhhh 
+        </html></p>   <h1>clear</h1>  html
         <h2>o que e html</h2> 
         <img src="img/exemplohtml.png" alt="logohtmlpreto">
 
