--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>meu primeiro site</title>
 </head>
 <body>
-<p><!DOCTYPE html>
-        <html>
-        <head>
-        <title>Page Title</title>
-        </head>
-        <body>
+        <h1>introducao HTML</h1>
+        <img src="img/logohtml.png" alt="logo do html preto">
+        <h2>o que e html</h2>
+        <ul>
+                <li>Coffee</li>
+                <li>Tea</li>
+                <li>Milk</li>
+              </ul> 
+              <li>The <!DOCTYPE html> declaration defines that this document is an HTML5 document
+                The <html> element is the root element of an HTML page
+                The <head> element contains meta information about the HTML page
+                The <title> element specifies a title for the HTML page (which is shown in the browser's title bar or in the page's tab)
+                The <body> element defines the document's body, and is a container for all the visible contents, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.
+                The <h1> element defines a large heading
+                The <p> element defines a paragraph
+                </li>
+
+              <h2>exemplo codigo</h2>
+              <img src="img/exemplohtml.png"alt= "exemplo de estrutura basica do html>"
+
+        <h2>para que serve as tagas</h2>
+<ul></ul>
+<h2>atributos utilizados nas tags html</h2>
+<table>
+        <tr>
+        <th>atributo</th>
+        <th>descricao</th>
+</tr>
+<tr>
+  <td>o atributo href</td>
+  <td>utilizado para criar links, especifica o URL da pagina para qual link leva </td>
+  <td></td>
+</tr>
+<table>
+
+
+
+
         
-        <h1>My First Heading</h1><h1>Heading 1</h1>
-        <h2>Heading 2</h2>
-        <h3>Heading 3</h3>
-        <h4>Heading 4</h4>
-        <h5>Heading 5</h5>
-        <h6>Heading 6</h6>
-        <p>My first paragraph.</p>
+
         
-        </body>
-        </html></p>   <h1>clear</h1>  html
-        <h2>o que e html</h2> 
-        <img src="img/exemplohtml.png" alt="logohtmlpreto">
-
-        <!DOCTYPE html>
-<html>
-<body>
-
-<h2>An Unordered HTML List</h2>
-
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>  <!DOCTYPE html>
-<html>
-<body>
-        <img src="img/logohtml.png" alt="estruturabasica">
-
-<h2>An Unordered HTML List</h2>
-</body>
-</html>
