--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <h2>para que serve as tagas</h2>
 <ul></ul>
-<h2>atributos utilizados nas tags html</h2>
+<h2>atributos utilizados nas tags html</h2>astronautas
 <table>
         <tr>
         <th>atributo</th>
