--- a/index - css in line int.html
+++ b/index - css in line int.html
@@ -4,18 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>meu primeiro site</title>
-        <style>
-        table
-                {
-                        front-family: monaco, monospace;
-                        font-size: 2rem
-
-                }
-
-        </style>
 </head>
-<body style="background-color: #A6554E; ">
-        <h1 style="color: #79A3D9; text-align: center;">introducao HTML</h1>
+<body>
+        <h1>introducao HTML</h1>
         <img src="img/logohtml.png" alt="logo do html preto">
         <h2>o que e html</h2>
         <ul>
@@ -35,9 +26,9 @@
               <h2>exemplo codigo</h2>
               <img src="img/exemplohtml.png"alt= "exemplo de estrutura basica do html>"
 
-<h2>para que serve as tagas</h2>
-
-<h2>atributos utilizados nas tags html</h2>
+        <h2>para que serve as tagas</h2>
+<ul></ul>
+<h2>atributos utilizados nas tags html</h2>astronautas
 <table>
         <tr>
         <th>atributo</th>
@@ -47,11 +38,6 @@
   <td>o atributo href</td>
   <td>utilizado para criar links, especifica o URL da pagina para qual link leva </td>
   <td></td> g
-</tr>
-<th>
-        <td>o atributo em href</td>
-        <td>utilizado para criar links, especifica o URL da pagina para a qual o link leva.</td>
-        <th><a href="https://www.w3schools.com"></a></th>
 </tr>
 <table>
 
