--- a/index - css in line int.html
+++ b/index - css in line int.html
@@ -24,9 +24,9 @@
                 </li>
 
               <h2>exemplo codigo</h2>
-              <img src="img/exemplohtml.png"alt= "exemplo de estrutura basica do html>"
+              <img src="img/exemplohtml.png" alt="exemplo de estrutura basica do html">
 
-        <h2>para que serve as tagas</h2>
+        <h2></h2>
 <ul></ul>
 <h2>atributos utilizados nas tags html</h2>astronautas
 <table>
@@ -37,8 +37,8 @@
 <tr>
   <td>o atributo href</td>
   <td>utilizado para criar links, especifica o URL da pagina para qual link leva </td>
-  <td></td> g
-</tr>
+  <td></td> 
+</tr>astronauta
 <table>
 
 
