--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style>
         table
                 {
-                        front-family: monaco, monospace;
+                        font-family: monaco, monospace;
                         font-size: 2rem
 
                 }
@@ -33,7 +33,7 @@
                 </li>
 
               <h2>exemplo codigo</h2>
-              <img src="img/exemplohtml.png"alt= "exemplo de estrutura basica do html>"
+              <img src="img/exemplohtml.png"alt= "exemplo de estrutura basica do html">
 
 <h2>para que serve as tagas</h2>
 
@@ -53,7 +53,7 @@
         <td>utilizado para criar links, especifica o URL da pagina para a qual o link leva.</td>
         <th><a href="https://www.w3schools.com"></a></th>
 </tr>
-<table> astronauta
+<table> 
 
 
 
