--- a/index - css in line int.html
+++ b/index - css in line int.html
@@ -5,42 +5,81 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>meu primeiro site</title>
 </head>
+<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<style>
+		body{
+			background-color: lightblue;
+		}
+		table{
+			background-color: crimson ;
+			font-size: 1rem;
+			font-family: monaco, monospace;
+			text-align: center;
+			
+		}
+		li{
+			font-size: 1rem;
+			font-family: monaco, monospace;
+			text-align: left;
+		}
+		img{
+			display: block;
+  			margin-left: auto;
+  			margin-right: auto;
+  			width: 40%;
+		}
+
+	</style>
+</head>
 <body>
-        <h1>introducao HTML</h1>
-        <img src="img/logohtml.png" alt="logo do html preto">
-        <h2>o que e html</h2>
-        <ul>
-                <li>Coffee</li>
-                <li>Tea</li>
-                <li>Milk</li>
-              </ul> 
-              <li>The <!DOCTYPE html> declaration defines that this document is an HTML5 document
-                The <html> element is the root element of an HTML page
-                The <head> element contains meta information about the HTML page
-                The <title> element specifies a title for the HTML page (which is shown in the browser's title bar or in the page's tab)
-                The <body> element defines the document's body, and is a container for all the visible contents, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.
-                The <h1> element defines a large heading
-                The <p> element defines a paragraph
-                </li>
+        <h1 style="text-align: center; font-size: 2rem;">Introduçao HTML!</h1>
+	<img src="img/logotipo html pretoo.png" alt="logotipo HTML preto">
+	<p>HTML é a linguagem de marcação padrão para a criação de páginas da Web.</p>
+	<h2 style="text-align: center; font-size: 2rem;">O que é HTML?</h2>
+	<ul>
+		<li>HTML significa linguagem de marcação de hipertexto</li>
+		<li>HTML é a linguagem de marcação padrão para criação de páginas da Web</li>
+		<li>HTML descreve a estrutura de uma página da Web</li>
+		<li>HTML consiste em uma série de elementos</li>
+		<li>Os elementos HTML informam ao navegador como exibir o conteúdo.</li>
+		<li>Os elementos HTML rotulam partes do conteúdo como “este é um título”, “este é um parágrafo”, “este é um link”, etc.</li>
+	</ul>
+	<h2 style="text-align: center; font-size: 2rem;">Um documento HTML simples</h2>
+	<img src="img/exemploCodigoHTML.PNG" alt="Exemplo de codigo HTML basico">
+	<a href="https://github.com/soph-astronauta">Meu GitHub :D</a>
+</body>
+	<h2 style="text-align: center; font-size: 2rem;">Para Que Servem As Tags:</h2>
+	<ul>
+		<li>A <code>&lt;!DOCTYPE html&gt;</code> declaração define que este documento é um documento HTML5</li>
+		<li>O <code>&lt;html&gt;</code> elemento é o elemento raiz de uma página HTML</li>
+		<li>O <code>&lt;head&gt;</code> elemento contém meta informações sobre a página HTML</li>
+		<li>O <code>&lt;title&gt;</code> elemento especifica um título para a página HTML (que é mostrado na barra de título do navegador ou na guia da página)</li>
+		<li>O <code>&lt;body&gt;</code> elemento define o corpo do documento e é um contêiner para todos os conteúdos visíveis, como títulos, parágrafos, imagens, hiperlinks, tabelas, listas, etc.</li>
+		<li>O <code>&lt;h1&gt;</code> elemento define um título grande</li>
+		<li>O <code>&lt;p&gt;</code> elemento define um parágrafo.</li>	
+	</ul>
+	<table>
+                <tr>
+			<th>Atributos</th>
+			<th>Descriçao</th>
+			<th>Exemplos</th>
+		</tr>
+		<tr>
+			<td>&lt;a href="https://www.w3schools.com"&gt; This is a link&lt;/a&gt;</td>
+			<td>O &lt;href&gt; atributo especifica o URL da página para a qual o link leva</td>
+			<td><a href="https://www.w3schools.com/html/html_links.asp">w3schools</a></td>
+		</tr>
+		<tr><img src="img_girl.jpg"></tr>
+		<tr>O &lt;src&gt; atributo especifica o caminho para a imagem a ser exibida:</tr>
+		<tr><a href="https://www.w3schools.com/html/html_links.asp">w3schools</a></tr>
 
-              <h2>exemplo codigo</h2>
-              <img src="img/exemplohtml.png" alt="exemplo de estrutura basica do html">
+	</table>
+</html>
 
-        <h2></h2>
-<ul></ul>
-<h2>atributos utilizados nas tags html</h2>astronautas
-<table>
-        <tr>
-        <th>atributo</th>
-        <th>descricao</th>
-</tr>
-<tr>
-  <td>o atributo href</td>
-  <td>utilizado para criar links, especifica o URL da pagina para qual link leva </td>
-  <td></td> 
-</tr>astronauta
-<table>
-
+        
+        
 
 
 
