--- a/CSS/index.html
+++ b/CSS/index.html
@@ -6,18 +6,28 @@
     <title>exemplo html semantico</title>
     <linl rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
+
         <div class="logo">
             <p>LOGOTIPO</p>
         </div>
+
         <nav>
-            <p>aqui vai o meno</p>
+            <p>aqui vai o menu</p>
         </nav>
+
     </header>
+
     <main>
+    <h1 class="title">INTRODUCAO AO HTML</h1>
         <section>
+            <h2 class="title">O que e o HTML</h2>
             <p>primeira sessao</p>
         </section>
         <section>
@@ -32,8 +42,26 @@
         <section>
             <p>quinta sessao</p>
         </section>
+        <section>
+            <h2 class="title">linguagem de programacao</h2>
+            <table>
+                <tr>
+                    <th>2021</th>
+                    <th>2020</th>
+                    <th>linguagem</th>
+                    <th>avaliacoes</th>
+                    <th>modulacao</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>C</td>
+                </tr>
+            </table>
+        </section>
     </main>
-    <footer>
+    
+    <footer class="rodape">
         <p>rodape da pagina</p>
     </footer>
     
