--- a/reserva.html
+++ b/reserva.html
@@ -61,7 +61,7 @@ body{
 	</ul>
 	<table>
 		<tr>
-			<th>Atributos</th>
+			<th>Atributos</th>nasa
 			<th>Descriçao</th>
 			<th>Exemplos</th>
 		</tr>
