--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         </div>
 
         <nav>
-            <p>aqui vai o menu</p>
+            <p>ASTROTEC</p>
         </nav>
 
     </header>
 
     <main>
-    <h1 class="title">INTRODUCAO AO HTML</h1>
+    <h1 class="title"></h1>
         <section>
-            <h2 class="title">O que e o HTML</h2>
-            <p>primeira sessao</p>
+            <h2 class="title"> GRUPO DE ASTRONOMIA E ASTROFÍSICA DA ETEC</h2>
+            <p>O grupo de astronomia e astrofísica da etec é um projeto para quem se interessa por assuntos científicos e quer aprender mais sobre o cosmo, e sua infinidade.</p>
         </section>
         <section>
             <p>segunda sessao</p>
@@ -43,19 +43,14 @@
             <p>quinta sessao</p>
         </section>
         <section>
-            <h2 class="title">linguagem de programacao</h2>
+            <h2 class="title"></h2>
             <table>
+
                 <tr>
-                    <th>2021</th>
-                    <th>2020</th>
-                    <th>linguagem</th>
-                    <th>avaliacoes</th>
-                    <th>modulacao</th>
+                    
                 </tr>
                 <tr>
-                    <td>1</td>
-                    <td>1</td>
-                    <td>C</td>
+                    
                 </tr>
             </table>
         </section>
