--- a/index - css in line int.html
+++ b/index - css in line int.html
@@ -35,7 +35,7 @@
 </head>
 <body>
         <h1 style="text-align: center; font-size: 2rem;">Introduçao HTML!</h1>
-	<img src="img/logotipo html pretoo.png" alt="logotipo HTML preto">
+	<img src="img/pillarsofcreation.jpg" alt="logotipo html preto">
 	<p>HTML é a linguagem de marcação padrão para a criação de páginas da Web.</p>
 	<h2 style="text-align: center; font-size: 2rem;">O que é HTML?</h2>
 	<ul>
@@ -47,7 +47,7 @@
 		<li>Os elementos HTML rotulam partes do conteúdo como “este é um título”, “este é um parágrafo”, “este é um link”, etc.</li>
 	</ul>
 	<h2 style="text-align: center; font-size: 2rem;">Um documento HTML simples</h2>
-	<img src="img/exemploCodigoHTML.PNG" alt="Exemplo de codigo HTML basico">
+	<img src="img/pillarsofcreation.jpg" alt="Exemplo de codigo HTML basico">
 	<a href="https://github.com/soph-astronauta">Meu GitHub :D</a>
 </body>
 	<h2 style="text-align: center; font-size: 2rem;">Para Que Servem As Tags:</h2>
