--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exemplo html semantico</title>
-    <linl rel="stylesheet" href="reset.css">
+    <linl rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
+    <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="" rel="stylesheet">" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
@@ -16,7 +18,7 @@
 
         <div class="logo">
             <p>LOGOTIPO</p>
-        </div>
+        </div> 
 
         <nav>
             <p>ASTROTEC</p>
@@ -26,12 +28,12 @@
 
     <main>
     <h1 class="title"></h1>
-        <section>
+        <section class="secao1">
             <h2 class="title"> GRUPO DE ASTRONOMIA E ASTROFÍSICA DA ETEC</h2>
             <p>O grupo de astronomia e astrofísica da etec é um projeto para quem se interessa por assuntos científicos e quer aprender mais sobre o cosmo, e sua infinidade.</p>
         </section>
         <section>
-            <p>segunda sessao</p>
+            <p>ASTRONOMIA: astronomia e a ciencia que estuda os corpos celestes e os fenomenos que ocorrem no universo, como estrelas, planetas, galáxias e buracos negros</p>
         </section>
         <section>
             <p>terceira sessao</p>
