--- a/reserva.html
+++ b/reserva.html
@@ -74,7 +74,7 @@ body{
 		<tr>O &lt;src&gt; atributo especifica o caminho para a imagem a ser exibida:</tr>
 		<tr><a href="https://www.w3schools.com/html/html_links.asp">w3schools</a></tr>
 
-	</table>nasa
+	</table>
 </html>
 
 
