--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="preconnect"href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="" rel="stylesheet">" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -40,6 +40,11 @@
         </section>
         <section>
             <p>quarta sessao</p>
+            <div class="linha">
+
+            </div>
+
+
         </section>
         <section>
             <p>quinta sessao</p>
