--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div> 
 
         <nav>
-            <p>ASTROTEC</p>nasa
+            <p>ASTROTEC</p>
         </nav>
 
     </header>
@@ -41,8 +41,10 @@
         <section>
             <p>quarta sessao</p>
             <div class="linha">
-
-            </div>
+              <div class="col-3">
+              <div>
+                <img class="imggaleria" src="img/">
+              </div>
 
 
         </section>
