--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="linha">
               <div class="col-3">
               <div>
-                <img class="imggaleria" src="img/">
+                <img class="imggaleria" src="img/"> venus
               </div>
 
 
