--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="cabecalho">
 
         <div class="logo">
-            <p>LOGOTIPO</p>trappist
+            <p>LOGOTIPO</p>
         </div> 
 
         <nav>
