--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             </p>
         </section>
         <section>
-            <p>ASTRONOMIA: astronomia e a ciencia que estuda os corpos celestes e os fenomenos que ocorrem no universo, como estrelas, planetas, galáxias e buracos negros</p>
+            <p>ASTRONOMIA: Astronomia e a ciencia que estuda os corpos celestes e os fenomenos que ocorrem no universo, como estrelas, planetas, galáxias e buracos negros</p>
         </section>
         <section>
-            <p>A astrofísica é um ramo da astronomia que se concentra no estudo e na compreensão das propriedades físicas e dos processos que ocorrem nos corpos celestes e no universo em geral. </p>
+            <p>ASTROFÍSICA: A astrofísica é um ramo da astronomia que se concentra no estudo e na compreensão das propriedades físicas e dos processos que ocorrem nos corpos celestes e no universo em geral. </p>
         </section>
         <section>
-            <p>imagens</p>
+            <p>ALGUNS EXEMPLOS DE CONTEÚDO QUE PODEM GERAR INTERESSE</p>
             <div class="linha">
                     <div class="col-3">
                     
