--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="secao1">
             <h2 class="title"> GRUPO DE ASTRONOMIA E ASTROFÍSICA DA ETEC</h2>
             <p>O grupo de astronomia e astrofísica da etec é um projeto para quem se interessa por assuntos científicos e quer aprender mais sobre o cosmo, e sua infinidade.
-               A proposta e que para quem se interessa por asuntos cientificos possa se divertir, encontrar informacoes, se atualizar das noticias, aprender mais sobre e muitas coisas mais.
+               A proposta e que para quem se interessa por assuntos científicos possa se divertir, encontrar informações, se atualizar das notícias, aprender mais sobre e muitas coisas mais.
             </p>
         </section>
         <section>
