--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </section>
 
         <section>
-            <img src="">
+            <img src="img/NASA_Worm_logo.svg_-580x160.png" alt="logodanasa">
             <p>o cosmo e suas particularidades</p>
         </section>
         <section>
