--- a/index.html
+++ b/index.html
@@ -91,10 +91,14 @@
 
         <section>
             
-            <h2 class="title">NATIONAL AERONAUTICS AND SPACE ADMINISTRATION</h2>
+            <p>NATIONAL AERONAUTICS AND SPACE ADMINISTRATION</p>
             <img src="img/NASA_Worm_logo.svg_-580x160.png" alt="logodanasa">
             <p>Quando falamos sobre agencias espaciais a primeira que vem a mente de qualquer pessoa é a queridinha NASA. 
-
+            <p>A NASA, ou National Aeronautics and Space Administration, é a agência espacial civil dos Estados Unidos. Fundada em 1958, a NASA desempenha um papel fundamental na exploração do espaço, pesquisa científica e desenvolvimento de tecnologias espaciais.</p>
+        
+                <ol>
+                    <li></li>
+                </ol>
         </section>
 
         <section>
