--- a/index.html
+++ b/index.html
@@ -95,9 +95,15 @@
             <img src="img/NASA_Worm_logo.svg_-580x160.png" alt="logodanasa">
             <p>Quando falamos sobre agencias espaciais a primeira que vem a mente de qualquer pessoa é a queridinha NASA. 
             <p>A NASA, ou National Aeronautics and Space Administration, é a agência espacial civil dos Estados Unidos. Fundada em 1958, a NASA desempenha um papel fundamental na exploração do espaço, pesquisa científica e desenvolvimento de tecnologias espaciais.</p>
-        
+            <p>ALGUMAS INFORMAÇÕES</p>
                 <ol>
-                    <li></li>
+                    <li>Exploração Espacial: A NASA é conhecida por suas missões espaciais icônicas. O programa Apollo, por exemplo, levou o primeiro homem à Lua em 1969 com a missão Apollo 11. A agência também enviou sondas para explorar outros planetas, como as missões Voyager, que proporcionaram informações valiosas sobre Júpiter, Saturno, Urano e Netuno, e as missões Mars Rover, que têm explorado a superfície de Marte.
+
+                    </li>
+
+                    <li>Estações Espaciais: A NASA foi responsável pela construção e operação de várias estações espaciais, incluindo a Skylab nos anos 70 e a Estação Espacial Internacional (ISS), uma colaboração internacional que está em órbita desde 1998.
+
+                    </li>
                 </ol>
         </section>
 
