--- a/index.html
+++ b/index.html
@@ -114,10 +114,16 @@
                     </li>
 
                     <li>Exploração Futura: A NASA tem planos ambiciosos para o futuro, incluindo missões tripuladas à Lua e a Marte. Além disso, a agência está desenvolvendo tecnologias para tornar as viagens espaciais mais seguras e eficientes.
-                        
+
                     </li>
 
                 </ol>
+        </section>
+
+        <section>
+
+            <p>EUROPEAN SPACE AGENCY</p>
+            <img src="img/ESA_logo.png" alt="logoesa">
         </section>
 
         <section>
