--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <section>
 
             <p>EUROPEAN SPACE AGENCY</p>
-            <img src="img/ESA_logo.png" alt="logoesa">
+            <img src="img/ESA_logo_2020_Deep.png" alt="logoesa">
         </section>
 
         <section>
