--- a/index.html
+++ b/index.html
@@ -124,6 +124,32 @@
 
             <p>EUROPEAN SPACE AGENCY</p>
             <img src="img/ESA_logo_2020_Deep.png" alt="logoesa">
+            <p>Outra empresa muito prestigiada é a ESA.</p>
+            <p>A ESA, ou Agência Espacial Europeia (European Space Agency), é uma organização intergovernamental dedicada à exploração espacial. Fundada em 1975, a ESA é uma das principais agências espaciais do mundo, composta por 22 países membros e tem sua sede em Paris, França.</p>
+            <p>ALGUMAS INFORMAÇÕES</p>
+
+            <ol>
+                <li>Missões Espaciais: A ESA realiza uma variedade de missões espaciais em colaboração com seus países membros e parceiros internacionais. Isso inclui missões de exploração do sistema solar, observação da Terra, astronomia, telecomunicações, navegação e muito mais.
+
+                </li>
+
+                <li>Estações Espaciais: A ESA participa da operação e manutenção da Estação Espacial Internacional (ISS), contribuindo com módulos de laboratório, veículos de carga e astronautas.
+
+                </li>
+
+                <li>Programa Ariane: A ESA é responsável pelo desenvolvimento e operação dos lançadores Ariane, uma família de foguetes utilizados para lançar satélites em órbita terrestre e realizar missões interplanetárias.
+
+                </li>
+
+                <li>Investigação Científica: A ESA realiza uma extensa pesquisa científica em várias áreas, incluindo ciências planetárias, física do espaço, ciências da Terra, astrofísica e biologia espacial.
+
+                </li>
+
+                <li>Exploração Espacial Futura: A ESA tem planos ambiciosos para o futuro, incluindo missões para explorar a Lua, Marte e outros corpos celestes, além de desenvolver tecnologias para viagens espaciais interplanetárias.
+                    
+                </li>
+            </ol>
+
         </section>
 
         <section>
