--- a/index.html
+++ b/index.html
@@ -146,10 +146,16 @@
                 </li>
 
                 <li>Exploração Espacial Futura: A ESA tem planos ambiciosos para o futuro, incluindo missões para explorar a Lua, Marte e outros corpos celestes, além de desenvolver tecnologias para viagens espaciais interplanetárias.
-                    
+
                 </li>
             </ol>
 
+        </section>
+
+        <section>
+
+            <p>ROSCOSMOS</p>
+            <img src="img/logo_roscosmos-220719.png" alt="logoroscosmos">
         </section>
 
         <section>
