--- a/index.html
+++ b/index.html
@@ -156,6 +156,38 @@
 
             <p>ROSCOSMOS</p>
             <img src="img/logo_roscosmos-220719.png" alt="logoroscosmos">
+            <p>Os russos também nunca ficam para tras.</p>
+            <p>A Roscosmos é a agência espacial governamental da Rússia, responsável por supervisionar os programas espaciais do país. Aqui estão algumas informações sobre a Roscosmos:
+            </p>
+            <p>ALGUMAS INFORMAÇÕES</p>
+
+            <ol>
+                <li>História: A Roscosmos foi fundada em 1992, após o colapso da União Soviética, reunindo várias organizações espaciais soviéticas. Anteriormente, a agência espacial russa era conhecida como Agência Espacial Russa.
+
+                </li>
+
+                <li>Missões Espaciais: A Roscosmos tem uma longa história de conquistas no espaço. Isso inclui o lançamento do primeiro satélite artificial, o Sputnik 1, em 1957, e a primeira viagem humana ao espaço, realizada por Yuri Gagarin em 1961. Além disso, a Roscosmos é responsável pela operação da Estação Espacial Internacional (ISS), em colaboração com outras agências espaciais.
+
+                </li>
+
+                <li>Programa Soyuz: O foguete Soyuz, desenvolvido pela Roscosmos, é um dos veículos de lançamento mais confiáveis do mundo. Ele é usado para enviar astronautas e cargas para a ISS, bem como para lançar satélites e outras missões espaciais.
+
+                </li>
+
+                <li>Exploração Espacial: A Roscosmos tem planos ambiciosos para a exploração espacial futura, incluindo missões tripuladas à Lua e a Marte, bem como o desenvolvimento de novas tecnologias espaciais.
+
+                </li>
+
+                <li>Cooperação Internacional: A Roscosmos colabora com outras agências espaciais ao redor do mundo em projetos de exploração espacial e pesquisa científica. Isso inclui parcerias com a NASA, ESA e outras agências espaciais.
+
+                </li>
+
+                <li>Inovação Tecnológica: A Roscosmos está envolvida no desenvolvimento de uma variedade de tecnologias espaciais avançadas, incluindo foguetes, espaçonaves, satélites e instrumentos científicos.
+                    
+                </li>
+            </ol>
+
+
         </section>
 
         <section>
