--- a/index.html
+++ b/index.html
@@ -191,6 +191,32 @@
         </section>
             <p>SISTEMA SOLAR</p>
             <img src="img/solar-system-5680167_1280 (1).jpg" alt="sistemasolar">
+            <p>Vamos dar uma explorada no nosso queridissimo sistema solar.</p>
+            <p>Desde sua formação até os eventos que moldaram seu desenvolvimento ao longo do tempo, a história do sistema solar é uma história de evolução, mudança e descoberta. Aqui estão alguns dos principais eventos e marcos ao longo da história do sistema solar:
+            </p>
+            <ol>
+                <li>Formação: O sistema solar se formou a partir de uma nuvem de gás e poeira cósmica conhecida como nebulosa solar. Há cerca de 4,6 bilhões de anos, esta nebulosa começou a se contrair sob a influência da gravidade, eventualmente se aquecendo e formando o Sol no centro e os planetas, asteroides e cometas ao redor.
+
+                </li>
+
+                <li>Formação dos Planetas: Os planetas se formaram a partir de discos protoplanetários de gás e poeira que giravam ao redor do Sol. Estes discos começaram a se aglutinar em pequenos corpos rochosos chamados planetesimais, que eventualmente se fundiram para formar os planetas. Os planetas terrestres se formaram mais próximos do Sol, enquanto os planetas gasosos se formaram mais distantes.
+
+                </li>
+
+                <li>Evolução e Estabilidade: Após sua formação, o sistema solar passou por várias fases de evolução, incluindo a migração planetária e a formação de luas, anéis e sistemas de satélites. Com o tempo, o sistema solar alcançou uma configuração estável, com os planetas orbitando o Sol em órbitas relativamente circulares.
+
+                </li>
+
+                <li>Impactos e Eventos: Ao longo de sua história, o sistema solar experimentou uma série de eventos significativos, como impactos de asteroides e cometas, erupções solares e mudanças climáticas. Estes eventos moldaram a paisagem e a atmosfera dos planetas e contribuíram para a evolução da vida na Terra.
+
+                </li>
+
+                <li>Exploração Espacial: Desde os primeiros voos espaciais tripulados até as missões robóticas mais recentes, a exploração espacial tem desempenhado um papel fundamental na compreensão do sistema solar. As sondas espaciais têm revelado informações importantes sobre os planetas, luas, asteroides e cometas do sistema solar, ajudando os cientistas a entender sua história e evolução.
+                    
+                </li>
+            </ol>
+
+
         
             <section>
 
