--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
             </p>
         </section>
         <section>
-            <p>ASTRONOMIA: Astronomia e a ciencia que estuda os corpos celestes e os fenomenos que ocorrem no universo, como estrelas, planetas, galáxias e buracos negros</p>
+            <p>ASTRONOMIA: A astronomia é a ciência que estuda os corpos celestes e os fenômenos que ocorrem no universo além da atmosfera da Terra. Isso inclui o estudo de planetas, estrelas, galáxias, nebulosas, buracos negros, supernovas, entre outros objetos e eventos cósmicos. A astronomia abrange uma ampla gama de subcampos, incluindo astrofísica, que se concentra nas propriedades físicas dos corpos celestes e nos processos que ocorrem no universo; cosmologia, que investiga a origem, a evolução e a estrutura geral do universo; e astrobiologia, que busca compreender a possibilidade de vida em outros planetas e sistemas estelares. Os astrônomos usam observações, teorias e modelos para explorar e explicar o universo e suas complexidades.
+            </p>
         </section>
         <section>
-            <p>ASTROFÍSICA: A astrofísica é um ramo da astronomia que se concentra no estudo e na compreensão das propriedades físicas e dos processos que ocorrem nos corpos celestes e no universo em geral. </p>
+            <p>ASTROFÍSICA:  A astrofísica é um ramo da astronomia que se concentra no estudo e na compreensão das propriedades físicas e dos processos que ocorrem nos corpos celestes e no universo em geral. Enquanto a astronomia observa e descreve os objetos e fenômenos no espaço, a astrofísica busca entender as leis físicas que regem esses objetos e fenômenos.
+
+                A astrofísica utiliza princípios fundamentais da física, como a mecânica newtoniana, a termodinâmica, a eletromagnetismo, a relatividade geral e a física quântica, para estudar uma variedade de objetos celestes, como estrelas, planetas, galáxias, buracos negros, nebulosas e o próprio universo.
+                
+                Os astrofísicos investigam uma ampla gama de fenômenos cósmicos, incluindo a formação e evolução das estrelas, a estrutura e dinâmica das galáxias, a natureza da matéria escura e da energia escura, os processos que ocorrem em sistemas astrofísicos extremos, como supernovas e buracos negros, e os padrões e a evolução do universo em grande escala. Em resumo, a astrofísica busca entender as leis físicas que governam o cosmos e como essas leis moldam e influenciam os objetos e fenômenos que observamos no espaço. 
+            </p>
         </section>
         <section>
             <p>ALGUNS EXEMPLOS DE CONTEÚDO QUE PODEM GERAR INTERESSE</p>
@@ -212,7 +218,7 @@
                 </li>
 
                 <li>Exploração Espacial: Desde os primeiros voos espaciais tripulados até as missões robóticas mais recentes, a exploração espacial tem desempenhado um papel fundamental na compreensão do sistema solar. As sondas espaciais têm revelado informações importantes sobre os planetas, luas, asteroides e cometas do sistema solar, ajudando os cientistas a entender sua história e evolução.
-                    
+
                 </li>
             </ol>
 
