--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@
                 Veja mais sobre "Buraco Branco" em: https://brasilescola.uol.com.br/geografia/buraco-branco.htm</p>
             <p>"As informações apresentadas estão de acordo com a teoria da relatividade. Segundo essa teoria, o buraco negro é uma região do espaço sideral de onde a matéria não pode escapar. Já o buraco branco é uma região do espaço sideral onde nada pode cair - em razão da enorme força gravitacional, que não permite tal deslocamento."
 
-                Veja mais sobre "Buraco Branco" em: https://brasilescola.uol.com.br/geografia/buraco-branco.htm</p>
+            <p><a href="https://brasilescola.uol.com.br/geografia/buraco-branco.htm">https://brasilescola.uol.com.br/geografia/buraco-branco.htm</a></p>
+            
         </section>
 
 
