--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div> 
 
         <nav>
-            <p>ASTROTEC</p>
+            <p>ASTROTEC</p>cosmonauta
         </nav>
 
     </header>
