--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                 A astrofísica utiliza princípios fundamentais da física, como a mecânica newtoniana, a termodinâmica, a eletromagnetismo, a relatividade geral e a física quântica, para estudar uma variedade de objetos celestes, como estrelas, planetas, galáxias, buracos negros, nebulosas e o próprio universo.
                 
                 Os astrofísicos investigam uma ampla gama de fenômenos cósmicos, incluindo a formação e evolução das estrelas, a estrutura e dinâmica das galáxias, a natureza da matéria escura e da energia escura, os processos que ocorrem em sistemas astrofísicos extremos, como supernovas e buracos negros, e os padrões e a evolução do universo em grande escala. Em resumo, a astrofísica busca entender as leis físicas que governam o cosmos e como essas leis moldam e influenciam os objetos e fenômenos que observamos no espaço. 
-            </p>
+            </p>nasa 
         </section>
         <section>
             <p>ALGUNS EXEMPLOS DE CONTEÚDO QUE PODEM GERAR INTERESSE</p>
             <div class="linha">
-                    <div class="col-3">
+                    <div class="col-3"> 
                     
                             <div>
                                 <img class="imggaleria" src="img/nebulosa.webp" alt=""srcset=""> 
