iodeto de bario

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div> 
 
         <nav>
-            <h1>ASTROTEC</h1>
+            <h1>ASTROTEC</h1>nasa
         </nav>
 
     </header>
