--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="cabecalho">
 
-        <div class="logo">
+        <div class="banner">
             <img src="img/logodaetec.jpg" alt="logoetec">
             <img src="img/space.jpg" alt="logo">
             <header>
@@ -65,7 +65,7 @@
 
                     <div class="col-3">
                             <div>
-                                 <img class="imggaleria" src="img/astronauta.jpeg" alt=""srcset="">
+                                 <img class="imggaleria" src="img/astronauta.jpeg" alt=""srcset="missoesespaciais">
                             </div>
                             
                             <p>ÚLTIMAS MISSÕES ESPACIAIS</p>
@@ -74,7 +74,7 @@
                     <div class="col-3">
 
                             <div>
-                                <img src="img/earth-blue-planet-globe-planet-87651.jpeg" alt=""srcset="pilaresdacriacao">
+                                <img src="img/earth-blue-planet-globe-planet-87651.jpeg" alt=""srcset="planetaterra">
                             </div>
 
                             <p>PLANETA TERRA</p>
@@ -428,6 +428,14 @@
 
         
 
+        </section>
+
+        <section>
+            <h2>RELATIVIDADE RESTRITA</h2>
+            <p>A teoria da relatividade restrita, também chamada de teoria da relatividade especial, é uma teoria, publicada em 1905 pelo cientista Albert Einstein, que postula a respeito da invariabilidade da velocidade da luz no vácuo e da inexistência de um referencial inercial absoluto.</p>
+            <div class="relative">
+                This div element has position: relative;
+            </div>
         </section>
 
 
