--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
-    <header class="cabecalho">nasa
+    <header class="cabecalho">
 
         <div class="banner">
             
