--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             
             <header>
                 <nav class="navbar">
-                    <div class="logo">Meu Site</div>
+                    <div class="logo">Meu Site</div> estrela
                     <input type="checkbox" id="menu-toggle" class="menu-toggle">
                     <label for="menu-toggle" class="menu-icon">&#9776;</label>
                     <ul class="nav-links">
