--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <input type="checkbox" id="menu-toggle" class="menu-toggle">
                     <label for="menu-toggle" class="menu-icon">&#9776;</label>
                     <ul class="nav-links">
-                      <li><a href="#home">Nebulosas</a></li>
-                      <li><a href="#about">Últimas missões espaciais</a></li>
-                      <li><a href="#services">Planeta Terra</a></li>
-                      <li><a href="#contact">Lua</a></li>
+                      <li><a href="#Nebulosas">Nebulosas</a></li>
+                      <li><a href="#Agencias espaciais">Últimas missões espaciais</a></li>
+                      <li><a href="#Buracos negros">Planeta Terra</a></li>
+                      <li><a href="#Sistema solar">Lua</a></li>
                     </ul>
                   </nav>
                 </header>
@@ -36,7 +36,7 @@
         </div> 
 
         <nav>
-            <h1>ASTROTEC</h1>astronomia
+            <h1>ASTROTEC</h1>
         </nav>
 
     </header>
