teoria da relatividade

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div> 
 
         <nav>
-            <h1>ASTROTEC</h1>astronauta
+            <h1>ASTROTEC</h1>
         </nav>
 
     </header>
@@ -429,7 +429,7 @@
 
 
                         Isaac Newton criou a Teoria da Gravidade durante quarentena entre 1665 e 1666
-                        Isaac Newton criou a Teoria da Gravidade durante quarentena entre 1665 e 1666.</p>
+                        </p>
                 </div>
             </div>
         </div>
