--- a/contato.html
+++ b/contato.html
@@ -23,12 +23,12 @@
                     <div class="logo">Meu Site</div> estrela
                     <input type="checkbox" id="menu-toggle" class="menu-toggle">
                     <label for="menu-toggle" class="menu-icon">&#9776;</label>
-                    <ul class="nav-links">
-                      <li><a href="#Nebulosas" id="Nebulosas-link">Nebulosas</a></li>
-                      <li><a href="#Agencias espaciais" id="Agencias espaciais-link">Últimas missões espaciais</a></li>
-                      <li><a href="#Buracos negros" id="Buraco negros">Buracos negros</a></li>
-                      <li><a href="#Sistema solar" id="Sistema solar">Sistema solar</a></li>
-                    </ul>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#news">News</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#about">About</a></li>
+                      </ul>
                 </nav>
                 <div>
 
@@ -149,7 +149,8 @@
         </section>
 
         <section>
-            <section><h2>HTML Forms</h2>
+            <section>
+                <h2>HTML Forms</h2>
 
                 <form action="/action_page.php">
                   <label for="fname">First name:</label><br>
@@ -220,7 +221,7 @@
 
 
         
-            <section>
+            
 
             <h2 class="title"></h2>
             <table>
