--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div> 
 
         <nav>
-            <h1>ASTROTEC</h1>saturno
+            <h1>ASTROTEC</h1>
         </nav>
 
     </header>
