--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>
             
             <header>
-                <nav class="navbar">
+                <nav class="navbar">estrela
                     <div class="logo">Meu Site</div> estrela
                     <input type="checkbox" id="menu-toggle" class="menu-toggle">
                     <label for="menu-toggle" class="menu-icon">&#9776;</label>
